<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".operaciones.PostpagoActivity">
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="0dp" app:srcCompat="@drawable/login_background"
            android:id="@+id/imageButtonFondo"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
    <ImageButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/imageButtonBlanco"
            android:background="@drawable/boton_redondeado_blanco" app:layout_constraintTop_toTopOf="@+id/guideline5"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="@+id/guideline3" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.0" app:layout_constraintBottom_toBottomOf="@+id/textView9"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/boton_redondeado_verde"
            android:id="@+id/imageViewAzul"
            app:layout_constraintTop_toTopOf="@+id/guideline" app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintStart_toStartOf="@+id/guideline6"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="@dimen/alto_campo" android:id="@+id/ventaPostpago"
            android:text="@string/boton_venta_postpago"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:background="@drawable/boton_redondeado_verde"
            android:textColor="@android:color/background_light"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/placa" android:layout_marginTop="5dp"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:id="@+id/guideline"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.02"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:id="@+id/guideline3"
                                                android:orientation="vertical"
                                                app:layout_constraintGuide_percent="0.07"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:id="@+id/guideline4"
                                                android:orientation="vertical"
                                                app:layout_constraintGuide_percent="0.93"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:id="@+id/guideline5"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.06"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:id="@+id/guideline6"
                                                android:orientation="vertical"
                                                app:layout_constraintGuide_percent="0.13"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:id="@+id/guideline7"
                                                android:orientation="vertical"
                                                app:layout_constraintGuide_percent="0.87"/>
    <TextView
            android:text="@string/titulo_postpago"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textView"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toTopOf="@+id/imageViewAzul"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewAzul"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/cardview_light_background" android:textStyle="bold"
            android:textAlignment="center" app:layout_constraintStart_toEndOf="@+id/salir"/>
    <TextView
            android:text="@string/titulo_placa"
            android:textColor="@color/color_boton"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toBottomOf="@+id/imageViewAzul"
            android:layout_marginStart="4dp" android:layout_marginTop="5dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:cursorVisible="true"
            android:isScrollContainer="true"
            android:inputType="textVisiblePassword"
            android:ems="10"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:id="@+id/placa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/color_boton"
            android:textColorLink="@color/color_boton"
            android:textColorHighlight="@color/color_boton"
            android:backgroundTint="@color/color_boton"
            android:textColor="@color/color_boton"
            android:contentDescription="@string/usuario_descripcion"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
    />
    <Button
            android:layout_width="50dp"
            android:layout_height="0dp" android:id="@+id/salir"
            android:background="@drawable/logo_exit"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewAzul"
            app:layout_constraintStart_toStartOf="@+id/imageViewAzul"/>
    <TextView
            android:textColor="@color/color_blanco"
            android:text="fin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView9"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toBottomOf="@+id/ventaPostpago"/>
    <TextView
            android:text=" "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="@+id/guideline3"/>
</androidx.constraintlayout.widget.ConstraintLayout>