<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background"
        tools:context=".operaciones.PrepagoActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

        <ImageButton
            android:id="@+id/imageButtonBlanco"
            android:layout_width="348dp"
            android:layout_height="393dp"
            android:background="@drawable/boton_redondeado_blanco"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline5" />
        <ImageView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:background="@drawable/boton_redondeado_azul"
                android:id="@+id/imageViewAzul"
                app:layout_constraintTop_toTopOf="@+id/guideline" app:layout_constraintEnd_toStartOf="@+id/guideline7"
                app:layout_constraintStart_toStartOf="@+id/guideline6"/>

        <Button
            android:id="@+id/abrirCamara"
            android:layout_width="57dp"
            android:layout_height="60dp"
            android:background="@drawable/camera_icon"
            android:backgroundTint="@color/colorAccent"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView10"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <Button
            android:id="@+id/ventaPrepago"
            android:layout_width="0dp"
            android:layout_height="@dimen/alto_campo"
            android:background="@drawable/boton_redondeado_azul"
            android:text="@string/boton_venta_prepago"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/background_light"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/horas" />

        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:id="@+id/guideline"
                                                    android:orientation="horizontal"
                                                    app:layout_constraintGuide_percent="0.02"/>
        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:id="@+id/guideline3"
                                                    android:orientation="vertical"
                                                    app:layout_constraintGuide_percent="0.07"/>
        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:id="@+id/guideline4"
                                                    android:orientation="vertical"
                                                    app:layout_constraintGuide_percent="0.93"/>
        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:id="@+id/guideline5"
                                                    android:orientation="horizontal"
                                                    app:layout_constraintGuide_percent="0.06"/>
        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:id="@+id/guideline6"
                                                    android:orientation="vertical"
                                                    app:layout_constraintGuide_percent="0.13"/>
        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:id="@+id/guideline7"
                                                    android:orientation="vertical"
                                                    app:layout_constraintGuide_percent="0.87"/>
        <TextView
                android:text="@string/titulo_prepago"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/textView"
                app:layout_constraintStart_toStartOf="@+id/imageViewAzul"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toTopOf="@+id/imageViewAzul"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewAzul"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/cardview_light_background" android:textStyle="bold"
                android:textAlignment="center"/>

        <TextView
                android:text="@string/titulo_horas"
                android:textColor="@color/color_boton"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/textView11"
                app:layout_constraintStart_toStartOf="@+id/guideline6"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                android:layout_marginStart="4dp"
                app:layout_constraintHorizontal_bias="1.0" app:layout_constraintTop_toBottomOf="@+id/placa"
                android:layout_marginTop="2dp"/>

        <EditText
            android:id="@+id/placa"
            android:layout_width="240dp"
            android:layout_height="120dp"
            android:background="@drawable/placa"
            android:contentDescription="@string/usuario_descripcion"
            android:ems="10"
            android:fontFamily="monospace"
            android:maxLength="6"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textAlignment="center"
            android:isScrollContainer="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/color_boton"
            android:textColorHighlight="@color/color_boton"
            android:textColorHint="@color/color_boton"
            android:textColorLink="@color/color_boton"
            android:textSize="60sp"
            android:textStyle="bold"
            android:inputType="textCapCharacters"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/imageViewAzul" />

        <Spinner
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="0dp"
                android:layout_height="@dimen/alto_campo" android:id="@+id/horas"
                app:layout_constraintStart_toStartOf="@+id/guideline6"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                app:layout_constraintHorizontal_bias="0.0"
                android:textColorHighlight="@color/color_boton"
                android:textColor="@android:color/background_dark"
                android:textColorHint="@color/color_boton"
                android:backgroundTint="@color/color_boton"
                android:dropDownWidth="match_parent" android:spinnerMode="dropdown"
                android:theme="@style/ThemeSpinner" app:layout_constraintTop_toBottomOf="@+id/textView11"
        />

        <androidx.camera.view.PreviewView
            android:id="@+id/previewView"
            android:layout_width="587dp"
            android:layout_height="777dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/captureButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Buscar placa"
            android:background="@drawable/boton_redondeado_azul"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/background_light"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/abrirCamara"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <Button
                android:layout_width="50dp"
                android:layout_height="0dp" android:id="@+id/salir"
                android:background="@drawable/logo_exit"
                app:layout_constraintTop_toTopOf="@+id/guideline"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewAzul"
                app:layout_constraintStart_toStartOf="@+id/imageViewAzul"/>
        <TextView
                android:textColor="@color/color_blanco"
                android:text="fin"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView9"
                app:layout_constraintStart_toStartOf="@+id/guideline6"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toBottomOf="@+id/ventaPrepago" app:layout_constraintHorizontal_bias="0.498"/>
        <TextView
                android:text=" "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="@+id/guideline3"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>